<resources>
    <string name="app_name">Am I Rich?</string>
    <string name="label_default_text">304.74</string>
    <string name="label_error_text">Error</string>
    <string name="base">Currency</string>
    <string name="imageview_desc">Bitcoin Logo</string>
    <string name="label_move">Movement</string>
    <string name="label_day_open">Day Opening</string>
    <string name="label_day_avg">Day Average</string>
    <string name="zero_value">0.00</string>

    <string-array name="currency_array">
        <item>AUD</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CNY</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>JPY</item>
        <item>PLN</item>
        <item>RUB</item>
        <item>SEK</item>
        <item>USD</item>
        <item>ZAR</item>
    </string-array>


</resources>
