<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bkgndColour"
    tools:context="com.londonappbrewery.bitcointicker.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_default_text"
        android:id="@+id/priceLabel"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@color/fontColour"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logoImage"
        android:contentDescription="@string/imageview_desc"
        android:src="@drawable/bitcoin_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/priceLabel"
        android:layout_marginTop="31dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelDayAvgTV"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/label_day_avg"
                android:textAlignment="viewEnd"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse"/>

            <TextView
                android:id="@+id/dayAvgTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.52"
                android:gravity="end"
                android:text="@string/zero_value"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelDayOpenTV"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/label_day_open"
                android:textAlignment="viewEnd"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse"/>

            <TextView
                android:id="@+id/dayOpenTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="0.52"
                android:text="@string/zero_value"
                android:textAlignment="viewEnd"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelMoveTV"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="0.0"
                android:text="@string/label_move"
                android:textAlignment="viewEnd"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse"/>

            <TextView
                android:id="@+id/moveTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.52"
                android:gravity="end"
                android:text="@string/zero_value"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/base"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/currency_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownSelector="@color/fontColour"
            android:gravity="center_horizontal"
            android:spinnerMode="dropdown"
            />


    </LinearLayout>

</RelativeLayout>
